build and curr_module trick

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,30 @@
-language: julia
-sudo: required
-os:
-  - linux
-  - osx
-julia:
-  - 0.7
-  - 1.0
+matrix:
+  include:
+      - language: julia
+        julia: 0.7
+        os: linux
+        dist: trusty
+        sudo: required
+      - language: julia
+        julia: 1.0
+        os: linux
+        dist: trusty
+        sudo: required
+      - language: julia
+        julia: nightly
+        os: linux
+        dist: trusty
+        sudo: required
+
+      - language: julia
+        julia: 0.7
+        os: osx
+      - language: julia
+        julia: 1.0
+        os: osx
+      - language: julia
+        julia: nightly
+        os: osx
 
 notifications:
     email: false
