--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,11 @@ matrix:
 
 notifications:
     email: false
+  script:
+    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+    - if [[ `uname` = "Linux" ]]; then TESTCMD="xvfb-run julia"; else TESTCMD="julia"; fi
+    - $TESTCMD -e 'using Pkg; Pkg.clone(pwd());
+          Pkg.build("GtkSourceWidget");
+          Pkg.test("GtkSourceWidget"; coverage=true)'
 after_success:
     - julia -e 'using Pkg; cd(Pkg.dir("GtkSourceWidget")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
