--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,30 @@
+language: julia
+sudo: required
+os:
+  - linux
+  - osx
+julia:
+  - 0.7
+  - 1.0
+  - nightly
 matrix:
-  include:
-      - language: julia
-        julia: 0.7
-        os: linux
-        dist: trusty
-        sudo: required
-      - language: julia
-        julia: 1.0
-        os: linux
-        dist: trusty
-        sudo: required
-      - language: julia
-        julia: nightly
-        os: linux
-        dist: trusty
-        sudo: required
-
-      - language: julia
-        julia: 0.7
-        os: osx
-      - language: julia
-        julia: 1.0
-        os: osx
-      - language: julia
-        julia: nightly
-        os: osx
-
+  allow_failures:
+  - julia: nightly
 notifications:
-    email: false
-  script:
-    - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-    - if [[ `uname` = "Linux" ]]; then TESTCMD="xvfb-run julia"; else TESTCMD="julia"; fi
-    - $TESTCMD -e 'using Pkg; Pkg.clone(pwd());
-          Pkg.build("GtkSourceWidget");
-          Pkg.test("GtkSourceWidget"; coverage=true)'
+  email: false
+addons:
+    apt:
+        packages:
+            - xvfb
+            - xauth
+            - libgtk-3-dev
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia -e 'using Pkg; Pkg.clone(pwd()); Pkg.build("GtkSourceWidget")'
+  - if [ `uname` = "Linux" ]; then
+      xvfb-run julia --check-bounds=yes -e 'using Pkg; Pkg.test("GtkSourceWidget", coverage=true)';
+    elif [ `uname` = "Darwin" ]; then
+      julia --check-bounds=yes -e 'using Pkg; Pkg.test("GtkSourceWidget", coverage=true)';
+    fi
 after_success:
-    - julia -e 'using Pkg; cd(Pkg.dir("GtkSourceWidget")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("GtkSourceWidget")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())';
