--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,8 @@ Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
 GtkSourceView_jll = "bf9c6edb-e643-5064-a5c3-0f96a1285812"
 
 [compat]
+Gtk = "1"
+GtkSourceView_jll = "4.4.0"
 julia = "1.3"
 
 [extras]
