--- a/Project.toml
+++ b/Project.toml
@@ -1,15 +1,19 @@
 name = "GtkSourceWidget"
 uuid = "6ceb4976-07da-5329-b1cb-20978726f1f4"
-version = "1.0.1"
+version = "2.0.0"
 
 [deps]
-Gtk = "4c0ca9eb-093a-5379-98c5-f87ac0bbbf44"
+Gtk4 = "9db2cae5-386f-4011-9d63-a5602296539b"
 GtkSourceView_jll = "bf9c6edb-e643-5064-a5c3-0f96a1285812"
+BitFlags = "d1d4a3ce-64b1-5f1a-9ba4-7e7e69966f35"
+CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 
 [compat]
-Gtk = "1"
-GtkSourceView_jll = "4.4.0"
-julia = "1.3"
+BitFlags = "0.1.5"
+CEnum = "0.4, 0.5"
+Gtk4 = "0.6"
+GtkSourceView_jll = "5.1.0"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
